--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,6 +12,6 @@
             {{message}}
         </div>
         <br><br>
-        <button>Create new account</button>
+        <button (click)="signUp()">Create new account</button>
     </div>
 </div>
