--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,9 +1,7 @@
-.route-container{
+.container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.map-container{
-    width: 50%;
-    height: 50%;
+
 }
