--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -11,3 +11,16 @@
     align-items: center;
     margin-bottom: 10px;
 }
+.input input{
+    padding: 10px;
+    margin: 10px;
+    /* text-align: center; */
+    border: none;
+    border-bottom: 1px solid lightgray;
+    outline: none;
+    height: 5px;
+    font-family: 'Segoe UI';
+    transition: 0.5s;
+    background-color: transparent;
+    color: black;
+}
