--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -2,7 +2,8 @@
     <h3>Post</h3>
     <div class="input-container">
         <div class="post">
-            <input type="text" placeholder="Write Post" [(ngModel)]="posttext">
+            <input type="text" placeholder="Write Post" [(ngModel)]="post.Description">
+            <input type="text" placeholder="Image" [(ngModel)]="post.ImageSorce">
         </div>
     </div>
     <div class="button">
