--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,8 @@
+.main-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .all{
     display: flex;
     flex-direction: column;
