--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,25 +1,26 @@
-
-<div class="all">
-    <div class="picture">
-        <img src='../assets/images/22.png' alt="No Picture">
-    </div>
-    <h3>Sign In</h3>
-    <div class="input">
-        <div class="input-user">
-            <input type="text" placeholder="Username" [(ngModel)]="username">
+<div class="main-container">
+    <div class="all">
+        <div class="picture">
+            <img src='../assets/images/22.png' alt="No Picture">
         </div>
-        <div class="input-password">
-            <input type="password" placeholder="Password" [(ngModel)]="password">
+        <h3>Sign In</h3>
+        <div class="input">
+            <div class="input-user">
+                <input type="text" placeholder="Username" [(ngModel)]="username">
+            </div>
+            <div class="input-password">
+                <input type="password" placeholder="Password" [(ngModel)]="password">
+            </div>
         </div>
-    </div>
-        <div class="loginbutton">
-            <button (click)="login()">Login</button>
+            <div class="loginbutton">
+                <button (click)="login()">Login</button>
+            </div>
+            <div class="message">
+                {{message}}
+            </div>
+            <div class="signup-button">
+                Not yet a member?
+                <button (click)="signUp()">Sign Up</button>
+            </div>
         </div>
-        <div class="message">
-            {{message}}
-        </div>
-        <div class="signup-button">
-            Not yet a member?
-            <button (click)="signUp()">Sign Up</button>
-        </div>
-    </div>
+</div>
