--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,5 +1,15 @@
-html, body {
-    margin: 0;
+.map-post {
+    width: 5vw;
+    background-color: aliceblue;
+    cursor: pointer;
+    border-radius: 10px;
+  } 
+  .post-description {
+    padding: 0.5em;
+    font-family: sans-serif;
+    font-weight: bold;
+  } 
+  img {
     width: 100%;
-    height: 100%;
- }
+    border-radius: 10px 10px 0 0;
+  }
