--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
-.route-container{
+.main-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 }
-.map-container{
-    width: 50%;
-    height: 50%;
+.route-container{
+    width: 100%;
+    height: 100%;
 }
+
