--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="route-container">
-    <router-outlet></router-outlet>
-
+<div class="main-container">
+    <div class="route-container">
+        <router-outlet></router-outlet>
+    
+    </div>
+    
 </div>
-<div class="map-container">
 
-    <app-map></app-map>
-</div>
