--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,37 @@
-.container{
+
+.main-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+}
+.map-container{
+    height: 80%;
+    width: 50%;
+}
+.popup-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top:0;
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
 }
+.map-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+} */
