--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<!-- <div class="menu">
     <div class="display-center">
       <h1>Menu</h1>
     </div>
@@ -16,20 +16,51 @@
       [context]="this"
       [debug]="true"
     >
-      <ac-billboard-desc
+    <ac-html-desc props="{position: entity.location, show: true}">
+      <ng-template let-entity>
+        <div class="map-post" (click)="showFullPost(entity)">
+          <div>
+            <img src="{{ entity.imageSorce }}" />
+          </div>
+          <div class="post-description">{{ entity.description }}</div>
+        </div>
+      </ng-template>
+    </ac-html-desc>
+       <ac-billboard-desc
         props="{ position: entity.position,
                               image : 'https://preview.ibb.co/cpDuwF/angular_cesium.png',
                               scale: 0.05,
                                                           }"
         >>
-      </ac-billboard-desc>
-      <ac-label-desc
+      </ac-billboard-desc> 
+     <ac-label-desc
         props="{
           position: entity.position,
           text: entity.id,
-           pixelOffset : [-15,20] | pixelOffset
+          pixelOffset : [-15,20] | pixelOffset
         }"
       >
       </ac-label-desc>
+    </ac-layer>
+  </ac-map>
+
+   -->
+   <ac-map #map>
+    <ac-layer
+      *ngIf="entities$"
+      acFor="let entity of entities$"
+      [context]="this"
+      [debug]="true"
+    >
+      <ac-html-desc props="{position: entity.location, show: true}">
+        <ng-template let-entity>
+          <div class="map-post" (click)="showFullPost(entity)">
+            <div>
+              <img src="{{ entity.imageSorce }}" />
+            </div>
+            <div class="post-description">{{ entity.description }}</div>
+          </div>
+        </ng-template>
+      </ac-html-desc>
     </ac-layer>
   </ac-map>
