--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  font-family: Poppins;
+  color: black;
+}
 .main-container{
   display: flex;
   align-items: center;
@@ -10,26 +15,25 @@
     align-items: center;
     margin-top: 40px;
     margin-bottom: 20px;
-    border: 1px solid lightgrey;
-    width: 300px;
+    width: 350px;
     font-family: 'Segoe UI';
-    height: 350px;
+    height: 500px;
     font-family: 'Segoe UI';
+    background-color: #0000000A;
 }
 img{
-    width: 50;
-    height: 50px;
+    width: 70;
+    height: 70px;
 }
 .input input{
     padding: 10px;
     margin: 10px;
-    /* text-align: center; */
+    text-align: center;
     border: none;
     border-bottom: 1px solid lightgray;
     outline: none;
-    height: 5px;
+    height: 7px;
     font-family: 'Segoe UI';
-    transition: 0.5s;
     background-color: transparent;
     color: black;
 }
@@ -46,13 +50,32 @@ img{
     align-items: center;
 }
 .loginbutton button{
-    width: 170px;
+    width: 200px;
     margin-top: 20px;
     margin-bottom: 20px;
     border: 1px solid transparent;
     /* background: linear-gradient(#3a7bd5,#3a6073); */
     background-color: #3a7bd5;
+    height: 30px;
 }
 .message{
     min-height: 30px;
 }
+/* .example-form-field {
+    width: 200px;
+  } */
+
+  .example-form {
+    min-width: 250px;
+    max-width: 700px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  
+  td {
+    padding-right: 8px;
+  }
+  
