--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,15 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  font-family: Poppins;
+  color: black;
+}
 .map-post {
-    width: 5vw;
-    background-color: aliceblue;
-    cursor: pointer;
-    border-radius: 10px;
-  } 
-  .post-description {
-    padding: 0.5em;
-    font-family: sans-serif;
-    font-weight: bold;
-  } 
-  img {
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-  }
+  width: 5vw;
+  background-color: aliceblue;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.post-description {
+  padding: 0.5em;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+img {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+.map-container {
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  max-height: 500px;
+}
+ac-map {
+  width: 100%;
+  height: 100%;
+}
