--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -27,4 +27,17 @@ html, body {
 .map-container{
   width: 100%;
   height: 100%;
+  
+  overflow: hidden;
+  
+}
+
+.toolbar-container{
+  display: flex;
+  justify-content: space-between;
+}
+.logo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
