--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,5 @@
-
 <mat-toolbar class="toolbar-container">
-
-
-      <div class="logo-container">
+<div class="logo-container">
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
           <mat-icon><i class='bx bx-menu'></i></mat-icon>
         </button>
@@ -10,7 +7,7 @@
           <button mat-menu-item>
             <span>Edit user <i class='bx bx-edit-alt' ></i></span>
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="LogOut()">
             <span>Log out <i class='bx bx-log-out-circle' ></i></span>
           </button>
         </mat-menu>
