--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
           <mat-icon><i class='bx bx-menu'></i></mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item>
+          <button mat-menu-item (click)="EditUser()">
             <span>Edit user <i class='bx bx-edit-alt' ></i></span>
           </button>
           <button mat-menu-item (click)="LogOut()">
