--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,6 +25,9 @@
                 {{message}}
             </div>
         </div>
+        <div class="forgot-password">
+            <button (click)="forgotPassword()">Forgot password?</button>
+        </div>
         <div class="signup-button">
             Not yet a member?
             <button (click)="signUp()">Sign Up</button>
