--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,5 +1,5 @@
 <div class="container-posts">
-    <mat-card class ="example-card" *ngFor="let post of list">
+    <mat-card class ="example-card" *ngFor="let post of list; let i = index">
         <mat-card-header>
           <mat-card-title>{{post.user.userName}}</mat-card-title>
         </mat-card-header>
@@ -10,7 +10,13 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button><mat-icon>favorite</mat-icon></button>
+          <div class="button-like">
+            {{countLike[i]}}
+            <button (click)="addLike(post.id)"><i *ngIf="ispostlike[i]" class='bx bxs-heart'></i>
+              <i *ngIf="!ispostlike[i]" class='bx bx-heart'></i>
+            </button>
+          </div>  
         </mat-card-actions>
       </mat-card>
+      
 </div>
