--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,8 +1,6 @@
 <div class="container-posts">
     <mat-card class ="example-card" *ngFor="let post of list; let i = index">
-        <mat-card-header>
           <mat-card-title>{{post.user.userName}}</mat-card-title>
-        </mat-card-header>
         <img mat-card-image src={{post.imageSorce}} alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>
@@ -12,10 +10,28 @@
         <mat-card-actions>
           <div class="button-like">
             {{countLike[i]}}
-            <button (click)="addLike(post.id)"><i *ngIf="ispostlike[i]" class='bx bxs-heart'></i>
-              <i *ngIf="!ispostlike[i]" class='bx bx-heart'></i>
+            <button (click)="addLike(post.id)">
+              <i *ngIf="ispostlike[i]" class='bx bxs-heart bx-xs'></i>
+              <i *ngIf="!ispostlike[i]" class='bx bx-heart bx-xs'></i>
             </button>
           </div>  
+          <div class="button-comment">
+            <button (click)="getcomment(i)">
+              <i *ngIf="!showComments[i]" class='bx bx-message-dots bx-sm'></i>
+              <i *ngIf="showComments[i]" class='bx bxs-message-dots bx-sm'></i>
+            </button>
+            <div class="comments-container" *ngIf="showComments[i]">
+                <div class="comment" *ngFor="let comment of post.comments">
+                 {{comment.user.userName}}: {{ comment.content}}
+                </div>
+            </div>
+          </div>
+          <div class="buttonaddcomment">
+            <button (click)="writePost(i)"><i class='bx bx-edit bx-sm'></i></button>
+            <div class="newcomment" *ngIf="shownewComments[i]">
+              <input (keydown.enter)="addComment(post.id)" type="text" placeholder="Write new comment" [(ngModel)]="newpost">
+            </div>
+          </div>
         </mat-card-actions>
       </mat-card>
       
