--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -5,7 +5,12 @@
         <mat-card-content>
           <p>
           {{post.description}}
-          </p>
+        </p>
+        <div class="tags-container">
+          <span class="tag" *ngFor="let tag of post.tags">
+           #{{tag.content}}
+          </span>
+        </div>
         </mat-card-content>
         <mat-card-actions>
           <div class="button-like">
