--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,43 +1,61 @@
+<head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <div class="container-posts">
-    <mat-card class ="example-card" *ngFor="let post of list; let i = index">
-          <mat-card-title>{{post.user.userName}}</mat-card-title>
-        <img mat-card-image src={{post.imageSorce}} alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-          {{post.description}}
-        </p>
-        <div class="tags-container">
-          <span class="tag" *ngFor="let tag of post.tags">
-           #{{tag.content}}
-          </span>
+  <mat-card class ="example-card" *ngFor="let post of list; let i = index">
+    <div class="class">
+      <mat-card-title>{{post.user.userName}}</mat-card-title>
+        <div class="example-button-container">
+          <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon">
+            <mat-icon>delete</mat-icon>
+          </button>
         </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <div class="button-like">
-            {{countLike[i]}}
-            <button (click)="addLike(post.id)">
-              <i *ngIf="ispostlike[i]" class='bx bxs-heart bx-xs'></i>
-              <i *ngIf="!ispostlike[i]" class='bx bx-heart bx-xs'></i>
-            </button>
-          </div>  
-          <div class="button-comment">
-            <button (click)="getcomment(i)">
-              <i *ngIf="!showComments[i]" class='bx bx-message-dots bx-sm'></i>
-              <i *ngIf="showComments[i]" class='bx bxs-message-dots bx-sm'></i>
-            </button>
-            <div class="comments-container" *ngIf="showComments[i]">
-                <div class="comment" *ngFor="let comment of post.comments">
-                 {{comment.user.userName}}: {{ comment.content}}
-                </div>
-            </div>
-          </div>
-          <div class="buttonaddcomment">
-            <button (click)="writePost(i)"><i class='bx bx-edit bx-sm'></i></button>
-            <div class="newcomment" *ngIf="shownewComments[i]">
-              <input (keydown.enter)="addComment(post.id)" type="text" placeholder="Write new comment" [(ngModel)]="newpost">
-            </div>
-          </div>
-        </mat-card-actions>
-      </mat-card>
-      
+    </div>
+      <img mat-card-image src={{post.imageSorce}} alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+        {{post.description}}
+      </p>
+      <div class="tags-container">
+        <span class="tag" *ngFor="let tag of post.tags">
+         #{{tag.content}}
+        </span>
+      </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <div class="all">
+        <div class="button-like">
+          {{countLike[i]}}
+          <button (click)="addLike(post.id)">
+            <i *ngIf="ispostlike[i]" class='bx bxs-heart bx-xs'></i>
+            <i *ngIf="!ispostlike[i]" class='bx bx-heart bx-xs'></i>
+          </button>
+        </div>
+        <div class="button-comment">
+          <button (click)="getcomment(i)">
+            <i *ngIf="!showComments[i]" class='bx bx-message-dots bx-sm'></i>
+            <i *ngIf="showComments[i]" class='bx bxs-message-dots bx-sm'></i>
+          </button>
+        
+        </div>
+        <div class="buttonaddcomment">
+          <button (click)="writePost(i)"><i class='bx bx-edit bx-sm'></i></button>
+         
+        </div>
+      </div>
+      <div class="newcomment" *ngIf="shownewComments[i]">
+        <mat-form-field class="example-full-width">
+          <mat-label>Write new comment</mat-label>
+          <input (keydown.enter)="addComment(post.id)" matInput ="text" [(ngModel)]="newpost">
+        </mat-form-field>
+      </div>
+      <div class="comments-container" *ngIf="showComments[i]">
+        <div class="comment" *ngFor="let comment of post.comments">
+         {{comment.user.userName}}: {{ comment.content}}
+        </div>
+    </div>
+ 
+      </mat-card-actions>
+    </mat-card>
+
 </div>
